...
                TextButton(
                    shape = MaterialTheme.shapes.medium,
                    onClick = {
                        BackendApi.delete_pass_service(id)
                        onDeleteFinished()
                    },
                ) { Text("Yes") }
                TextButton(
                    shape = MaterialTheme.shapes.medium,
                    onClick = onCancelRequest,
                ) { Text("No") }
            }
        }
...
