...
                overlapRatio = 4 / 5f,
                modifier = Modifier
                    .size(72.dp + 20.dp)
                    .clip(MaterialTheme.shapes.large) // clip the ripple
                    .menuAnchor(ExposedDropdownMenuAnchorType.PrimaryNotEditable)
                    .clickable {} // Just to get the styling; click handled by .menuAnchor()
                    .testTag("trainset_selector")
            ) {
                Icon(
                    painterResource(AppIcons.Trainset(trainsetSelection)),
                    "Trainset: ${trainsetSelection ?: "none selected"}",
                    tint = if (isError)
                                MaterialTheme.colorScheme.error
...
                                IconButtonDefaults.IconButtonWidthOption.Narrow
                            )
                        )
                    ) {
                        Icon(
                            painterResource(R.drawable.ic_trash),
                            contentDescription = "Delete stop",
                        )
                    }
                }
            }

        }
...
