...
                    fadeOut() + slideOutVertically { it / 2 },
                ) {
                    Text(service.trainset.name)
                }
                Icon(
                    painterResource(AppIcons.Trainset(service.trainset)),
                    "Train icon",
                    Modifier
                        .size(72.dp + 20.dp)
                )
            }

            // Amenities
...
