package com.jeffreyalanwang.dutchrailways.client.android.ui.screens.child

import androidx.compose.ui.layout.onVisibilityChangedNode
import androidx.compose.ui.test.assertAny
import androidx.compose.ui.test.assertCountEquals
import androidx.compose.ui.test.filter
import androidx.compose.ui.test.filterToOne
import androidx.compose.ui.test.hasAnyAncestor
import androidx.compose.ui.test.hasClickAction
import androidx.compose.ui.test.hasContentDescription
import androidx.compose.ui.test.hasNoClickAction
import androidx.compose.ui.test.hasSetTextAction
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.isDisplayed
import androidx.compose.ui.test.onAllNodesWithContentDescription
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onLast
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollTo
import androidx.compose.ui.test.performTextInput
import androidx.compose.ui.test.v2.runAndroidComposeUiTest
import com.jeffreyalanwang.dutchrailways.client.android.Trainset
import com.jeffreyalanwang.dutchrailways.client.android.isNotEmpty
import com.jeffreyalanwang.dutchrailways.client.android.onNodeAfterExactlyOneExists
import com.jeffreyalanwang.dutchrailways.client.android.ui.MainActivity
import org.junit.Test

class EditPassServiceMutationTest {

    @Test
    fun `duplicate and mutate a PassService`() = runAndroidComposeUiTest<MainActivity> {
        // 1. Navigate to the Edit tab
        onNodeWithText("Edit").performClick()
        onNodeWithText("Tap to unlock")
            .run { if ( isDisplayed() ) performClick() }

        // 2. Search for a PassService
        onAllNodes(hasSetTextAction()).onFirst().performTextInput("2263")

        // 3. Select the search result
        onNodeAfterExactlyOneExists(hasText("2263", substring = true) and !hasSetTextAction())
            .performScrollTo()
            .performClick()

        // 4. Click the "Duplicate" icon
        onNodeAfterExactlyOneExists(hasContentDescription("Duplicate"))
            .performClick()

        // 5. Change trainset to SLT
        onNodeAfterExactlyOneExists(hasTestTag("trainset_selector"), 5000)
            .performClick()
        onNodeWithText(Trainset.SLT.name)
            .performScrollTo()
            .performClick()

        onNodeWithTag("trainset_selector")
            .performClick()
        onAllNodesWithText(Trainset.SLT.name)
            .filterToOne(hasNoClickAction())
            .assertExists()

        // 6. Save changes
        onNodeWithContentDescription("Finish & save").performClick()

        // 7. Navigate to duplicated PassService
        onNodeWithText("Edit").performClick()
        onAllNodes(hasSetTextAction()).onLast().performTextInput("2263")

        // 8. Select the search result
        with ( hasText("2263", substring = true) and !hasSetTextAction() ) {
            waitUntil("Search result to appear", 5000) {
                onAllNodes(this).isNotEmpty()
            }
            onAllNodes(this)[1]
                .performScrollTo()
                .performClick()
        }

        // 9. Assert navigation to PassServiceDetailScreen with new data
        onNodeAfterExactlyOneExists(hasContentDescription("Train icon"), 5000)
            .performClick()

        onNodeWithText(Trainset.SLT.name).assertExists()
    }

    @Test
    fun `modify stops in place`() = runAndroidComposeUiTest<MainActivity> {
        // 1. Navigate to the Edit tab
        onNodeWithText("Edit").performClick()
        onNodeWithText("Tap to unlock")
            .run { if ( isDisplayed() ) performClick() }

        // 2. Search for a PassService
        onAllNodes(hasSetTextAction()).onFirst().performClick()

        onAllNodes(hasSetTextAction()).onLast().performTextInput("2263")

        // 3. Select the search result
        onNodeAfterExactlyOneExists(hasText("2263", substring = true) and !hasSetTextAction())
            .performScrollTo()
            .performClick()

        // 4. Click the "Edit" icon
        onNodeAfterExactlyOneExists(hasContentDescription("Edit") and hasClickAction())
            .performClick()

        // 5. Modify stops
        waitUntil("Stop station selector to appear", 5000) {
            onAllNodesWithTag("stop_station_1").isNotEmpty()
        }
        // Delete last stop (Rotterdam Centraal)
        onAllNodes(hasAnyAncestor(hasTestTag("edit_stop_row_2"))).run {
            assertAny(hasText("Rotterdam Centraal"))
            filterToOne(hasContentDescription("Delete stop")).performClick()
            assertCountEquals(0)
        }
        
        // 6. Save changes
        onNodeWithContentDescription("Finish & save").performClick()

        // 7. Assert navigation back
        waitUntil("Train icon to appear", 5000) {
            onAllNodesWithContentDescription("Train icon").isNotEmpty()
        }

        onNodeWithText("Amsterdam Centraal").assertExists()
        onNodeWithText("Den Haag HS").assertExists()
        onNodeWithText("Rotterdam Centraal").assertDoesNotExist()
    }

}
